Added button hovers and added reset button

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,12 @@
 				updateResults();
 			});
 
+			document.querySelector('.reset-btn').addEventListener('click', () => {
+				success = 0;
+				attempts = 0;
+				updateResults();
+			});
+
 			updateResults();
 		</script>
 	</body>
