--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
 	</head>
 	<body>
 		<h1>Trick Evaluator</h1>
+		<div style="display: flex; justify-content: center; margin-bottom: 16px">
+			<div class="reset-btn-container">
+				<button class="reset-btn"><span>Reset</span></button>
+			</div>
+		</div>
 		<div class="button-group">
 			<button class="pass-btn"><span>Pass</span></button>
 			<button class="fail-btn"><span>Fail</span></button>
